--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,7 +13,9 @@
     "importHelpers": true,
     "incremental": true,
     "isolatedModules": true,
-    "lib": ["es2022"],
+    "lib": [
+      "es2022"
+    ],
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "noEmitOnError": true,
@@ -23,7 +25,7 @@
     "noUnusedLocals": true,
     "pretty": true,
     "removeComments": false,
-    "resolveJsonModule": false,
+    "resolveJsonModule": true,
     "skipDefaultLibCheck": false,
     "skipLibCheck": true,
     "sourceMap": false,
