--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "nx": "20.1.4",
-    "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
-    "azure-functions-core-tools": "^4.x",
     "@types/node": "18.x",
-    "rimraf": "^5.0.0"
+    "azure-functions-core-tools": "^4.x",
+    "nx": "20.1.4",
+    "rimraf": "^5.0.0",
+    "tslib": "^2.3.0",
+    "typescript": "~5.5.2"
   },
   "workspaces": [
     "packages/*"
