--- a/packages/first-function/package.json
+++ b/packages/first-function/package.json
@@ -12,7 +12,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.0.0",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {}
 }
